@@ -1,3 +1,8 @@
+Fri Mar 16 11:24:51 2007  Tim Janik  <timj@imendio.com>
+
+	* glib/gscanner.[hc]: reverted premature commit which broke
+	GScanner ABI and API, #415323.
+
 2007-03-16  Chris Wilson  <chris@chris-wilson.co.uk>
 
 	* glib/gkeyfile.c: Convert to GSlice and check for redundant
